# genome-sampler

./: .buildinfo  .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  RELEASING.md  clade-variation.py  clean-seqs.py  downstream-workflows.html  downstream-workflows.md  environment.yml  genindex.html  gisaid-cleanup.py  index.html  install.html  install.md  intro.html  intro.md  methods.html  myst.yml  objects.inv  other.html  other.md  pyproject.toml  q2doc-plug.py  q2doc.bib  sample-clusters.py  search.html  searchindex.js  setup.cfg  setup.py  subsample-time.py  tutorial.html  zreferences.html
_sources/: install.md  intro.md  methods.md.txt  tutorial.md  tutorial.md.txt
clade-variation-test-data/: aln1.fna  bad-seq-metadata1.tsv  bad-seq-metadata2.tsv  bad-seq-metadata3.tsv  seq-metadata1.tsv  seq-metadata2.tsv  seq-metadata3.tsv  seq-metadata4.tsv
conda-env-files/: genome-sampler-py36-linux-conda.yml  genome-sampler-py36-osx-conda.yml
conda-recipe/: meta.yaml
docs/: _config.yml  _toc.yml  downstream-workflows.md  install.md  intro.md  methods.md  myst.yml  other.md  q2doc-plug.py  references.bib  tutorial-snakemake.md  tutorial.md  zreferences.md
environment-files/: genome-sampler-dev.yml  genome-sampler-qiime2-amplicon-2024.10.yml  genome-sampler-qiime2-tiny-2024.10.yml  readthedocs.yaml  readthedocs.yml
genome_sampler/: __init__.py  _version.py  citations.bib  combine.py  common.py  filter.py  label_seqs.py  mask.py  plugin_setup.py  root_outgroup.py  sample-clusters.py  sample_diversity.py  sample_longitudinal.py  (+8 more)
(+204 files in other folders)
