[project]
name = "genome-sampler"
authors = [
    { name = "Evan Bolyen", email = "ebolyen@gmail.com" }
]
description = "QIIME 2 plugin for sampling from collections of sequences."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/caporaso-lab/genome-sampler"
Repository = "https://github.com/caporaso-lab/genome-sampler"

[project.entry-points.'qiime2.plugins']
"genome-sampler" = "genome_sampler.plugin_setup:plugin"

[build-system]
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git-archive"
describe-subst = "$Format:%(describe)$"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "genome_sampler/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["genome_sampler*"]

[tool.setuptools.package-data]
genome_sampler = ["**/*"]
